# 3D_Viewer_v2-on-CPPlang-with-Qt

./: README.md
Docker/: Dockerfile
Docker/ubuntu_ci/: Makefile  README.md
Docker/ubuntu_dev/: Makefile  docker-compose.yml
materials/: instructions_for_testing.md  instructions_for_testing_rus.md
src/: Doxyfile  Makefile  README.md  main.cpp
src/controller/: controller.cpp  controller.h
src/makefiles/: build.mk  clean.mk  doxygen.mk  get.mk  style.mk  test.mk  utils.mk  valgrind.mk  variables.mk
src/model/: model.cpp  model.h  tranformation.cpp  tranformation.h
src/tests/: CMakeLists.txt  test_model.cpp
src/tests/scripts/: generate_sphere.py
src/view/: 3DViewer.pro  facade.cpp  facade.h  gui.cpp  gui.h  opengl_widget.cpp  opengl_widget.h  style.qss  view.ui
